tests/unit-fail-compilation/dup_params1.ref
File: dup_params1.c
Line: 3
Error: FD1
Description: duplicate parameters in function definition.
Type: Constraint violation.
See also: C11 sec. 6.7:3
Translation failed. Run kcc -d dup_params1.c to see commands run.
